fixed overlooked flex-wrap on .taco class.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,6 +79,7 @@ input[type=text]:focus, input[type=password]:focus {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .user {
